test: add test case for linking existing actor to a new movie